--- a/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
+++ b/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
@@ -30,7 +30,24 @@
 					<%=addNavItem("Order", "/Order", request) %>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+					<li><a href="#loginModal" data-toggle="modal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 				</ul>
 			</div>
 		</header>
+		<div id="loginModal" class="modal fade" role="dialog">
+			<div class="modal-dialog modal-sm">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">Login</h4>
+					</div>
+					<div class="modal-body">
+        				<p>Some text in the modal.</p>
+      				</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-success disabled">Login</button>
+        				<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+      				</div>
+				</div>
+			</div>
+		</div>
