--- a/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
+++ b/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
@@ -42,10 +42,19 @@
 						<h4 class="modal-title">Login</h4>
 					</div>
 					<div class="modal-body">
-        				<p>Some text in the modal.</p>
+        				<form id="loginForm">
+        					<div class="form-group">
+        						<label for="username">Username:</label>
+        						<input type="text" class="form-control" id="username" placeholder="username"/>
+        					</div>
+        					<div class="form-group">
+        						<label for="password">Password:</label>
+        						<input type="password" class="form-control" id="password" placeholder="password"/>
+        					</div>
+        				</form>
       				</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-success disabled">Login</button>
+						<button type="submit" class="btn btn-success disabled" form="loginForm">Login</button>
         				<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
       				</div>
 				</div>
