#20: can get users data out database

--- a/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
+++ b/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
@@ -37,7 +37,7 @@
 					if (null == user)
 					{
 						userLabel = "<span class='glyphicon glyphicon-user'></span> Sign Up";
-						%><%=addNavItem(userLabel,"/Account",request)%><%
+						%><%=addNavItem(userLabel,"/SignUp",request)%><%
 					}
 					else
 					{
