#7: viewable and editable account page

--- a/YHP_website/src/main/webapp/WEB-INF/pages/includes/bootstrapImports.jspf
+++ b/YHP_website/src/main/webapp/WEB-INF/pages/includes/bootstrapImports.jspf
@@ -5,6 +5,10 @@
 		<style>
 			.nav
 			{
-				margin:auto;
+				margin: auto;
+			}
+			.glyphicon
+			{
+				width: 1.28571429em;
 			}
 		</style>
