--- a/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
+++ b/YHP_website/src/main/webapp/WEB-INF/pages/includes/header.jspf
@@ -28,7 +28,7 @@
 		%>
 		<header class="navbar navbar-default">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="<%=((HttpServletRequest) request).getContextPath()%>">Yeovil Healthcare Products</a>
+					<a class="navbar-brand" href="<%=((HttpServletRequest) request).getContextPath()%>/">Yeovil Healthcare Products</a>
 				</div>
 				<ul class="nav navbar-nav">
 					<%=addNavItem(request, "Products", "/") %>
